<resources>
    <string name="app_name">SignalLabs</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="levels">RECTANGULAR</string>
    <string name="angle">TRIANGULAR</string>
    <string name="saw">SAW</string>
    <string name="original">Оригинал</string>
    <string name="time">Время</string>
    <string name="amplitude">Амплитуда</string>
    <string name="dpf">ДПФ</string>
    <string name="frequency">Частота</string>
    <string name="draw">Draw Graph</string>
    <string name="lab_1">Lab 1</string>
    <string name="lab_2">Lab 2</string>
    <string name="lab_3">Lab 3</string>
    <string name="lab_4">Lab 4</string>
    <array name="diogramma_types">
        <item>SAW</item>
        <item>TRIANGULAR</item>
        <item>RECTANGULAR</item>
    </array>
    <array name="param_types">
        <item>Абсолютное значение</item>
        <item>Действительная часть</item>
        <item>Мнимая часть</item>
    </array>
    <array name="function_types">
        <item>ОДПФ (фильтрованное)</item>
        <item>БПФ</item>
        <item>БПФn</item>
    </array>
    <array name="low_pass_filter_types">
        <item>Rectangular</item>
        <item>Hamming</item>
        <item>Hanning</item>
        <item>Bartlett</item>
        <item>Blackman</item>
    </array>
    <array name="lab2_signal_types">
        <item>Идеал</item>
        <item>Пила</item>
        <item>Файл</item>
    </array>
    <array name="lab4_diagramma_types">
        <item>Cardio</item>
        <item>Reo</item>
        <item>Velo</item>
        <item>Saw</item>
        <item>Triangular</item>
        <item>Rectangular</item>
    </array>
    <array name="lab4_function_types">
        <item>Уолш</item>
        <item>Адамар</item>
    </array>
    <string name="a">\u0418\u0434\u0435\u0430\u043B</string>
    <string name="b">\u041F\u0438\u043B\u0430</string>
    <string name="c">\u0424\u0430\u0439\u043B</string>
    <string name="cardio">Cardio</string>
    <string name="reo">Reo</string>
    <string name="velo">Velo</string>
</resources>
