<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.dat.signallabs.views.VerticalTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginRight="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/amplitude"
                android:textColor="@color/black" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/graph1"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:text="@string/original"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/time"
                    android:textColor="@color/black" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.dat.signallabs.views.VerticalTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginRight="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/amplitude"
                android:textColor="@color/black" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/graph2"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:text="@string/dpf"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/frequency"
                    android:textColor="@color/black" />
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <com.dat.signallabs.views.VerticalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginRight="4dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/amplitude"
            android:textColor="@color/black" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/graph3"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp" />

            <TextView
                android:id="@+id/function"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:text="@string/original"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:fontFamily="sans-serif-light"
                android:text="@string/frequency"
                android:textColor="@color/black" />
        </FrameLayout>

    </LinearLayout>
</LinearLayout>
